New layout bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,5 @@
-/*!
- * Start Bootstrap - 2 Col Portfolio (http://startbootstrap.com/template-overviews/2-col-portfolio)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-2-col-portfolio/blob/master/LICENSE)
- */
-
 body {
   padding-top: 54px;
-}
-
-@media (min-width: 992px) {
-  body {
-    padding-top: 56px;
-  }
 }
 
 #upperRow {
@@ -22,9 +10,6 @@ margin-top: 40px;
   margin-bottom: 30px;
 }
 
-.pagination {
-  margin-bottom: 30px;
-}
 
 .bgimage {
 	background-image: url('../images/ep_naturalwhite.png');
@@ -45,13 +30,59 @@ margin-top: 40px;
 .navbar {
   height: 67px;
   border-bottom: 2px solid #ccc;
+  padding-left: 0px;
 }
 
 #footer {
-  height: 20px;
-  border-top: 2px solid #4aaaa5;
+  background-color: #666 !important;
+  border-top: 4px solid #4aaaa5;
   font-size: 13px;
   position: fixed;
   bottom: 0;
   width: 100%;
+}
+
+#leftPanel {
+  background-color: white;
+}
+
+#rightPanel {
+  background-color: white;
+}
+
+.aboutMe {
+  color: #4aaaa5;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 24px;
+  padding-top: 20px;
+  margin-left: 24px;
+}
+
+.connectMe {
+  color: #4aaaa5;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 24px;
+  padding-top: 20px;
+  margin-left: 24px;
+}
+
+#content {
+  padding-left: 20px;
+  margin-left: 20px;
+  padding-right: 15px;
+  padding-bottom: 30px;
+}
+
+.aboutImage {
+  float:left;
+  margin-right:10px; 
+}
+
+
+
+/* Media queries */
+@media (min-width: 992px) {
+  body {
+    padding-top: 58px;
+  }
 }
