--- a/css/style.css
+++ b/css/style.css
@@ -74,12 +74,33 @@ margin-top: 40px;
   padding-bottom: 30px;
 }
 
-.aboutImage {
+
+/* ----- Portfolio Images ---- */
+.imgLeft {
   float:left;
-  margin-right:10px; 
+  padding: 0;
+  margin-bottom: 15px;
+  margin-right: 20px;
+  margin-top:10px;
+  position: relative;
 }
 
-/* Right Panel */
+.imgTitle {
+  position: absolute;
+  background-color: #4aaaa5;
+  color:white;
+  font-family: 'Georgia', Times, 'Times New Roman', serif;
+  font-size: 20px;
+  bottom:18px;
+  width:100%;
+  padding: 5px 2px;
+  text-align: center;
+  opacity: 0.9;
+}
+/* ----- End Portfolio Images ---- */
+
+
+/* ----- Right Panel ----- */
 .connectMe {
   color: #4aaaa5;
   font-family: Georgia, 'Times New Roman', Times, serif;
