--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ margin-top: 40px;
   background-color: white;
 }
 
-/* Left Panel */
+/* ----- Left Panel ----- */
 
 .aboutImage {
   float:left;
@@ -79,6 +79,8 @@ margin-top: 40px;
   padding-right: 15px;
   padding-bottom: 30px;
 }
+
+/* ----- End Left Panel ----- */
 
 
 /* ----- Portfolio Images ---- */
@@ -115,8 +117,57 @@ margin-top: 40px;
   margin-left: 50px;
 }
 
+/* ----- End Right Panel -----*/
 
-/* Social links */
+
+/* ----- Contact form ----- */
+form {
+  font-family:  'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 25px;
+  color:#928E8E;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color:#ccc;
+}
+
+input[type=submit] {
+    width: 30%;
+    background-color: #4aaaa5;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #92ccc9;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+/* ----- End Contact form ----- */
+
+
+/* ----- Social links ----- */
 .iconLeft {
   margin-left:30px;
 }
@@ -129,7 +180,10 @@ margin-top: 40px;
   margin-left:1px !important;
 }
 
-/* Hovers */
+/* ----- End Social links ----- */
+
+
+/* ----- Hovers ----- */
 .iconLeft:hover {
   opacity: 0.5;
 }
@@ -145,7 +199,9 @@ margin-top: 40px;
 .logoNav:hover {
 opacity: 0.8;
 }
-/* End Social links */
+/* -----End Hovers ----- */
+
+
 
 
 /* Media queries */
